Fix spacing in menu bar

--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,7 @@ img { max-width: 100%; }
   margin-bottom: 100px;
 }
 .menu-list a span {
+  top: 5px;
   margin-left: 10px;
   font-weight: 400;
   font-size: 12px;
